--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login to nutrition assistant</title>
+    <title>Login page</title>
 </head>
+
 <body>
+<h1>Login page</h1>
+<hr>
+
+<p th:if="${loginError}" class="error">Ошибка при вводе логина или пароля.</p>
+
+<form th:action="@{/authenticate}" method="POST">
+    <label for="username">Username</label>:
+    <input type="text" id="username" name="username" autofocus="autofocus" /> <br/>
+    <label for="password">Password</label>:
+    <input type="password" id="password" name="password" /> <br/>
+    <input type = "submit" value="Log in"/>
+
+</form>
 
 </body>
 </html>
