--- a/src/main/resources/templates/welcome/welcome.html
+++ b/src/main/resources/templates/welcome/welcome.html
@@ -13,7 +13,7 @@
 	    margin: 0px 3px 3px 0px;
 	    padding: 0px 0px 0px 0px;
 	    float: left;
-	    height: 30px;
+	    height: 30px
 	    width: 150px;
 	}
 	.block .element:hover{
@@ -21,7 +21,7 @@
 	    margin: 0px 3px 3px 0px;
 	    padding: 0;
 	    float: left;
-	    height: 30px;
+	    height: 30px
 	    width: 150px;
 	    background: #FFFAE7;
 	}
@@ -47,7 +47,7 @@
 <div id="container">
     <div id="menu" class="block">
         <div class="element">
-            <a href="">Зарегистрироваться</a>
+            <a href="/registration">Зарегистрироваться</a>
         </div>
         <div class="element">
             <a href="/user/profile">Профиль</a>
