--- a/src/main/resources/templates/nutrition/view.html
+++ b/src/main/resources/templates/nutrition/view.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <a th:href="@{/nutrition/products}">products list</a>
+<a th:href="@{/nutrition/dishes}">dishes list</a>
 <h3>Your meal plan for today:</h3>
 </body>
 </html>
