--- a/src/main/resources/templates/nutrition/dishes/index.html
+++ b/src/main/resources/templates/nutrition/dishes/index.html
@@ -10,19 +10,21 @@
 
 <div class="container">
     <h2 class="nutritionPageHead">Блюда:</h2>
-
+    Вес указан на 100г. блюда.
+    <br/>
+    <br/>
     <a th:href="@{/nutrition/dishes/new}">Добавить</a>
 
     <table id="nutritionTable">
         <thead>
             <tr>
                 <td>Название блюда</td>
-                <td>белки</td>
-                <td>жиры</td>
-                <td>углеводы</td>
-                <td>калорийность</td>
-                <td>цена</td>
-                <td>действие</td>
+                <td>Белки</td>
+                <td>Жиры</td>
+                <td>Углеводы</td>
+                <td>Калорийность</td>
+                <td>Цена</td>
+                <td>Действие</td>
             </tr>
         </thead>
         <tbody>
