--- a/src/main/resources/templates/nutrition/products/index.html
+++ b/src/main/resources/templates/nutrition/products/index.html
@@ -10,6 +10,9 @@
 
 <div class="container">
     <h2 class="nutritionPageHead">Продукты:</h2>
+    Вес указан на 100г. продукта.
+    <br/>
+    <br/>
 
     <a th:href="@{/nutrition/products/new}">Добавить</a>
     <table id="nutritionTable">
