--- a/src/main/resources/templates/nutrition/view.html
+++ b/src/main/resources/templates/nutrition/view.html
@@ -7,6 +7,8 @@
 <body>
 <a th:href="@{/nutrition/products}">products list</a>
 <a th:href="@{/nutrition/dishes}">dishes list</a>
+<a th:href="@{/nutrition/menus}">menus list</a>
+<a th:href="@{/nutrition/templates}">templates list</a>
 <h3>Your meal plan for today:</h3>
 </body>
 </html>
